--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>SNS共有リンク作成</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
             background-color: #f4f4f4;
             color: #333;
             margin: 0;
@@ -56,7 +55,7 @@
             background: #fff;
             padding: 10px;
             border-radius: 5px;
-            margin: 5px 0;
+            margin-top: 10px;
             cursor: pointer;
             transition: all 0.3s;
             border: 1px solid #ddd;
@@ -64,6 +63,12 @@
 
         .sns-option:hover {
             background: #f0f0f0;
+        }
+
+        /*チェックボックスがONの時に角の丸みを調整*/
+        input[type="checkbox"]:checked+.sns-option {
+            border-bottom-left-radius: 0px;
+            border-bottom-right-radius: 0px;
         }
 
         .sns-option img {
@@ -95,15 +100,17 @@
         #twitter-details,
         #line-details {
             display: none;
-            margin-top: 10px;
             background-color: #f0f0f0;
             padding: 20px;
+            border-bottom-left-radius: 5px;
+            border-bottom-right-radius: 5px;
         }
 
         #x-text,
         #x-hashtags,
         #twitter-text,
-        #twitter-hashtags {
+        #twitter-hashtags,
+        #line-text {
             width: 93.5%;
         }
 
@@ -199,8 +206,8 @@
                     src="image/facebook-logo.svg" alt="Facebook">Facebook</label>
         </div>
         <div class="sns-option">
-            <label for="line"><input type="checkbox" id="line" value="line" onchange="toggleLINEDetails()"> <img src="image/line-logo.svg"
-                    alt="LINE">LINE</label>
+            <label for="line"><input type="checkbox" id="line" value="line" onchange="toggleLINEDetails()"> <img
+                    src="image/line-logo.svg" alt="LINE">LINE</label>
         </div>
 
         <!-- line details -->
