misskey bug fix

--- a/index.html
+++ b/index.html
@@ -220,13 +220,14 @@
         </div>
 
         <div class="sns-option">
-            <label for="misskey"><input type="checkbox" id="misskey" value="misskey" onchange="toggleDetails('misskey')"> <img src="images/misskey-logo.png"
+            <label for="misskey"><input type="checkbox" id="misskey" value="misskey"
+                    onchange="toggleDetails('misskey')"> <img src="images/misskey-logo.png"
                     alt="Misskey">Misskey</label>
         </div>
 
         <!-- misskey details -->
         <div id="misskey-details">
-            <label for="line-text">共有時に表示されるテキスト</label>
+            <label for="misskey-text">共有時に表示されるテキスト</label>
             <input type="text" id="misskey-text" placeholder="このサイト面白いよ！など">
         </div>
 
