--- a/index.html
+++ b/index.html
@@ -258,6 +258,7 @@
         </div>
 
         <button onclick="generateOutput()">生成</button>
+        <!--TODO: 文字列生成後の表示を改善し、コピーボタンを作成-->
         <h3>生成された文字列:</h3>
         <p id="output"></p>
     </div>
