--- a/index.html
+++ b/index.html
@@ -259,6 +259,7 @@
 
         <button onclick="generateOutput()">生成</button>
         <!--TODO: 文字列生成後の表示を改善し、コピーボタンを作成-->
+        <!--TODO: ロゴの大きさを統一-->
         <h3>生成された文字列:</h3>
         <p id="output"></p>
     </div>
