outputが左寄りになるように設定

--- a/index.html
+++ b/index.html
@@ -147,10 +147,9 @@
 
         #output {
             margin-top: 15px;
-            background: #e9ecef;
+            background-color: #e9ecef;
             padding: 10px;
             border-radius: 5px;
-            text-align: center;
             font-weight: bold;
         }
 
