index.htmlにSEO情報を追加し、バージョン番号を1.0.7に更新

--- a/index.html
+++ b/index.html
@@ -3,8 +3,20 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SNS共有リンク作成</title>
+    <meta name="description" content="markdown用SNS共有ボタン作成ツールです。URLを入力し、共有したいSNSを選択すると、そのSNS用の共有ボタンの文字列が生成されます。">
+    <meta name="keywords" content="SNS,共有,ボタン,作成,ツール,markdown">
+    <meta name="author" content="Hoshimikan6490">
+    <meta property="og:title" content="SNS共有ボタン作成ツール">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://hoshimikan6490.com/markdown-share-button/">
+    <meta property="og:image"
+        content="https://hoshimikan6490.com/markdown-share-button/images/thumbnail.png">
+    <meta property="og:description" content="markdown用SNS共有ボタン作成ツールです。URLを入力し、共有したいSNSを選択すると、そのSNS用の共有ボタンの文字列が生成されます。">
+    <meta property="og:site_name" content="SNS共有ボタン作成ツール">
+    <meta property="og:locale" content="ja_JP">
+    <title>SNS共有ボタン作成ツール</title>
     <style>
         body {
             background-color: #f4f4f4;
@@ -178,7 +190,7 @@
 
 <body>
     <div class="container">
-        <h2>SNS共有リンク作成</h2>
+        <h2>SNS共有ボタン作成ツール</h2>
         <h3><label for="url">URLを入力:</label></h3>
         <textarea name="url" placeholder="共有したいURLを入力" wrap="soft" id="url"></textarea>
 
@@ -281,7 +293,7 @@
     </div>
     <div class="credit">
         <div>
-            <p>version 1.0.6</p>
+            <p>version 1.0.7</p>
         </div>
         <div>
             <p>created by <a href="https://hoshimikan6490.com">Hoshimikan6490</a></p>
