index.htmlのSNSオプションの画像パスを修正

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://hoshimikan6490.com/markdown-share-button/">
     <meta property="og:image"
-        content="https://hoshimikan6490.com/markdown-share-button/images/thumbnail.png">
+        content="https://hoshimikan6490.com/markdown-share-button/markdown-share-button/images/thumbnail.png">
     <meta property="og:description" content="markdown用SNS共有ボタン作成ツールです。URLを入力し、共有したいSNSを選択すると、そのSNS用の共有ボタンの文字列が生成されます。">
     <meta property="og:site_name" content="SNS共有ボタン作成ツール">
     <meta property="og:locale" content="ja_JP">
@@ -197,7 +197,7 @@
         <h3>共有するSNSを選択:</h3>
         <label for="x" class="sns-option">
             <input type="checkbox" id="x" value="x" onchange="toggleDetails('x')">
-            <img src="images/x-logo.svg" alt="X" id="x-logo">
+            <img src="markdown-share-button/images/x-logo.svg" alt="X" id="x-logo">
             𝕏
         </label>
 
@@ -216,7 +216,7 @@
 
         <label for="twitter" class="sns-option">
             <input type="checkbox" id="twitter" value="twitter" onchange="toggleDetails('twitter')">
-            <img src="images/twitter-logo.svg" alt="Twitter">
+            <img src="markdown-share-button/images/twitter-logo.svg" alt="Twitter">
             Twitter
         </label>
 
@@ -235,12 +235,12 @@
 
         <label for="facebook" class="sns-option">
             <input type="checkbox" id="facebook" value="facebook">
-            <img src="images/facebook-logo.svg" alt="Facebook">
+            <img src="markdown-share-button/images/facebook-logo.svg" alt="Facebook">
             Facebook
         </label>
         <label for="line" class="sns-option">
             <input type="checkbox" id="line" value="line" onchange="toggleDetails('line')">
-            <img src="images/line-logo.svg" alt="LINE">
+            <img src="markdown-share-button/images/line-logo.svg" alt="LINE">
             LINE
         </label>
 
@@ -252,7 +252,7 @@
 
         <label for="misskey" class="sns-option">
             <input type="checkbox" id="misskey" value="misskey" onchange="toggleDetails('misskey')">
-            <img src="images/misskey-logo.png" alt="Misskey">
+            <img src="markdown-share-button/images/misskey-logo.png" alt="Misskey">
             Misskey(misskey.io)
         </label>
 
@@ -266,13 +266,13 @@
 
         <label for="pocket" class="sns-option">
             <input type="checkbox" id="pocket" value="pocket">
-            <img src="images/pocket-logo.svg" alt="Pocket">
+            <img src="markdown-share-button/images/pocket-logo.svg" alt="Pocket">
             Pocket
         </label>
 
         <label for="email" class="sns-option">
             <input type="checkbox" id="email" value="email" onchange="toggleDetails('email')">
-            <img src="images/email-logo.svg" alt="email">
+            <img src="markdown-share-button/images/email-logo.svg" alt="email">
             email
         </label>
 
