markdown-share-button.pages.devでも正しく動作するように調整

--- a/index.html
+++ b/index.html
@@ -301,6 +301,15 @@
     </div>
 
     <script>
+        (window.onload = function () {
+            let uri = new URL(window.location.href);
+            if (uri.hostname === "https://markdown-share-button.pages.dev") {
+                document.querySelectorAll("img").forEach(img => {
+                    img.src = img.src.replace("markdown-share-button/", "");
+                });
+            }
+        })();
+
         function toggleDetails(type) {
             let checkbox = document.getElementById(type);
             document.getElementById(`${type}-details`).style.display =
