--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
     <script>
         (window.onload = function () {
             let uri = new URL(window.location.href);
-            if (uri.hostname === "https://markdown-share-button.pages.dev") {
+            if (uri.hostname === "markdown-share-button.pages.dev") {
                 document.querySelectorAll("img").forEach(img => {
                     img.src = img.src.replace("markdown-share-button/", "");
                 });
