--- a/index.html
+++ b/index.html
@@ -303,11 +303,13 @@
     <script>
         (window.onload = function () {
             let uri = new URL(window.location.href);
-            if (uri.hostname === "markdown-share-button.pages.dev" ||
-                uri.hostname === "hoshimikan6490.github.io"
-            ) {
+            if (uri.hostname === "markdown-share-button.pages.dev") {
                 document.querySelectorAll("img").forEach(img => {
                     img.src = img.src.replace("markdown-share-button/", "");
+                });
+            } else if (uri.hostname === "hoshimikan6490.github.io") {
+                document.querySelectorAll("img").forEach(img => {
+                    img.src = img.src.replace("markdown-share-button/markdown-share-button/", "markdown-share-button/");
                 });
             }
         })();
