--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <meta property="og:title" content="SNS共有ボタン作成ツール">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://hoshimikan6490.com/markdown-share-button/">
-    <meta property="og:image" content="https://hoshimikan6490.com/markdown-share-button/images/thumbnail.svg">
+    <meta property="og:image" content="https://hoshimikan6490.com/markdown-share-button/images/thumbnail.png">
     <meta property="og:description" content="markdown用SNS共有ボタン作成ツールです。URLを入力し、共有したいSNSを選択すると、そのSNS用の共有ボタンの文字列が生成されます。">
     <meta property="og:site_name" content="SNS共有ボタン作成ツール">
     <meta property="og:locale" content="ja_JP">
-    <meta property="twitter:image" content="https://hoshimikan6490.com/markdown-share-button/images/thumbnail.svg">
+    <meta property="twitter:image" content="https://hoshimikan6490.com/markdown-share-button/images/thumbnail.png">
     <meta property="twitter:site" content="@hoshimikan6490">
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:title" content="SNS共有ボタン作成ツール">
