バージョンを1.0.7から1.0.8に更新し、特定のホスト名とパスに対する画像のsrcを修正する処理を追加

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
     </div>
     <div class="credit">
         <div>
-            <p>version 1.0.7</p>
+            <p>version 1.0.8</p>
         </div>
         <div>
             <p>created by <a href="https://hoshimikan6490.com">Hoshimikan6490</a></p>
@@ -308,6 +308,11 @@
         (window.onload = function () {
             let uri = new URL(window.location.href);
             if (uri.hostname === "markdown-share-button.pages.dev" || uri.hostname == "localhost") {
+                document.querySelectorAll("img").forEach(img => {
+                    img.src = img.src.replace("markdown-share-button/", "");
+                });
+            }
+            if (uri.hostname === "hoshimikan6490.com" && uri.pathname === "/markdown-share-button/") {
                 document.querySelectorAll("img").forEach(img => {
                     img.src = img.src.replace("markdown-share-button/", "");
                 });
