--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
     </div>
     <div class="credit">
         <div>
-            <p>version 1.0.9</p>
+            <p>version 1.0.10</p>
         </div>
         <div>
             <p>created by <a href="https://hoshimikan6490.com">Hoshimikan6490</a></p>
@@ -312,9 +312,9 @@
                     img.src = img.src.replace("markdown-share-button/", "");
                 });
             }
-            if (uri.hostname === "hoshimikan6490.com" && uri.pathname === "/markdown-share-button/") {
+            if (uri.hostname === "hoshimikan6490.com" && uri.pathname === "/markdown-share-button/markdown-share-button/") {
                 document.querySelectorAll("img").forEach(img => {
-                    img.src = img.src.replace("markdown-share-button/", "");
+                    img.src = img.src.replace("/markdown-share-button/markdown-share-button/", "/markdown-share-button/");
                 });
             }
         })();
